// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableComponent homepage component test 1`] = `
.c2 {
  align: right;
}

.c1 {
  aria-label: "simple table";
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10% 0;
}

<main
  className="c0"
>
  <div
    className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      className="MuiTable-root c1"
      role={null}
    >
      <thead
        className="MuiTableHead-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            E-mail
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            First 20 characters
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            Add/Remove to Selected
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body"
            role="cell"
            scope="row"
          >
            id labore ex et quam laborum
          </th>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            Eliseo@gardner.biz
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            laudantium enim quas
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Added
              </span>
            </button>
          </td>
        </tr>
        <tr
          className="MuiTableRow-root"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body"
            role="cell"
            scope="row"
          >
            quo vero reiciendis velit similique earum
          </th>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            Jayne_Kuhic@sydney.com
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            est natus enim nihil
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Add
              </span>
              <span
                className="MuiTouchRipple-root"
              />
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</main>
`;

exports[`TableComponent selected comments component test 1`] = `
.c2 {
  align: right;
}

.c1 {
  aria-label: "simple table";
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0 10% 0;
}

<main
  className="c0"
>
  <div
    className="MuiPaper-root MuiTableContainer-root MuiPaper-elevation1 MuiPaper-rounded"
  >
    <table
      className="MuiTable-root c1"
      role={null}
    >
      <thead
        className="MuiTableHead-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root MuiTableRow-head"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            Name
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            E-mail
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            First 20 characters
          </th>
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-head c2"
            scope="col"
          >
            Add/Remove to Selected
          </th>
        </tr>
      </thead>
      <tbody
        className="MuiTableBody-root"
        role={null}
      >
        <tr
          className="MuiTableRow-root"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body"
            role="cell"
            scope="row"
          >
            id labore ex et quam laborum
          </th>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            Eliseo@gardner.biz
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            laudantium enim quas
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary"
              disabled={false}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={0}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Remove
              </span>
            </button>
          </td>
        </tr>
        <tr
          className="MuiTableRow-root"
          role={null}
        >
          <th
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body"
            role="cell"
            scope="row"
          >
            quo vero reiciendis velit similique earum
          </th>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            Jayne_Kuhic@sydney.com
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            est natus enim nihil
          </td>
          <td
            aria-sort={null}
            className="MuiTableCell-root MuiTableCell-body c2"
          >
            <button
              className="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary Mui-disabled Mui-disabled"
              disabled={true}
              onBlur={[Function]}
              onClick={[Function]}
              onDragLeave={[Function]}
              onFocus={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onMouseLeave={[Function]}
              onMouseUp={[Function]}
              onTouchEnd={[Function]}
              onTouchMove={[Function]}
              onTouchStart={[Function]}
              tabIndex={-1}
              type="button"
            >
              <span
                className="MuiButton-label"
              >
                Removed
              </span>
            </button>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</main>
`;
